--- a/src/remastersys/remastersys.conf
+++ b/src/remastersys/remastersys.conf
@@ -7,7 +7,7 @@ WORKDIR="/home/remastersys"
 
 # Here you can add any other files or directories to be excluded from the live filesystem
 # Separate each entry with a space
-EXCLUDES="/usr/riso/imagens/rec.tar /usr/riso/imagens/linux.tar /usr/riso/imagens/windows.img"
+EXCLUDES="/usr/riso/imagens/rec.tar /usr/riso/imagens/linux.tar /usr/riso/imagens/windows.img /usr/bin/risos /usr/riso/risos /etc/avahi/services/riso.service"
 
 # Here you can change the livecd/dvd username
 # Make sure live user is all lowercase
